vanilla/installer: Use an agent to add to the system classpath rather than a subprocess